# ChangeLog for dev-util/ragel
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/ragel/ChangeLog,v 1.29 2009/07/03 16:03:19 flameeyes Exp $

  03 Jul 2009; Diego E. Pettenò <flameeyes@gentoo.org> -ragel-6.3.ebuild,
  -ragel-6.4.ebuild, -files/ragel-6.4-solaris.patch:
  Cleanup old versions.

  30 May 2009; Ulrich Mueller <ulm@gentoo.org> ragel-6.3.ebuild:
  Remove app-text/tetex from dependencies, bug 227443.

  19 May 2009; Diego E. Pettenò <flameeyes@gentoo.org> ragel-6.5.ebuild,
  +files/ragel-6.5+gcc-4.4.patch, +files/ragel-6.5-freebsd.patch:
  Add patch/hack to build with GCC 4.4 and a patch to fix tests under
  Gentoo/FreeBSD.

  19 May 2009; Diego E. Pettenò <flameeyes@gentoo.org> ragel-6.5.ebuild:
  Fix ebuild since upstream changed the tarball; now vim-syntax is back, as
  well as the old docs, and the tests are not restricted any longer.

*ragel-6.5 (18 May 2009)

  18 May 2009; Diego E. Pettenò <flameeyes@gentoo.org> +ragel-6.5.ebuild:
  Version bump and simplify ebuild since this time it uses automake (but
  tests fail for now).

  16 May 2009; Diego E. Pettenò <flameeyes@gentoo.org> ragel-6.4.ebuild:
  Add ~x86-fbsd keyword.

  08 May 2009; Ferris McCormick <fmccor@gentoo.org> ragel-6.4.ebuild:
  Add ~sparc for testing, part of bug #269021.

  28 Mar 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +files/ragel-6.4-solaris.patch, ragel-6.4.ebuild:
  Add a patch to build under Solaris (for Prefix).

  24 Mar 2009; Luca Barbato <lu_zero@gentoo.org> ragel-6.4.ebuild:
  Call econf, as reported in bug #263498

*ragel-6.4 (22 Mar 2009)

  22 Mar 2009; Diego E. Pettenò <flameeyes@gentoo.org> +ragel-6.4.ebuild:
  Version bump; since the new version tremendously simplified the build
  system, don't sed it around and simply install the binary by hand. Also
  download the PDF guide with USE=doc instead of building it from the LaTeX
  sources.
