@@ -1,10 +1,9 @@
 AUX ragel-6.4-solaris.patch 2142 RMD160 919186d187399a55c5f0dae723e01f5308d750e0 SHA1 e5d6f97c3ca99c6b6db838a326017968252cb807 SHA256 8ec8536ec924d8810397bf54866dec83f1076bb90952b10b4fb5f78026d98804
 AUX ragel-6.5+gcc-4.4.patch 743 RMD160 3c5b5e298a1c19ad979d49ec56d5d6855efd848f SHA1 50578786b767f99985a2451bffc921c69c90a497 SHA256 6628abbfd4a89c65df23738a6d43f32b3c2c153722efb96e0829e55090adb9b4
 AUX ragel-6.5-freebsd.patch 727 RMD160 a3a673796e81df6ec62871a1346cf58b6d831c09 SHA1 d68cc2c8a89c6ad1d2d88cd75637823acc539d81 SHA256 b7370fe0365f1db1d419294e9f8fdf3ed109e5c4c01eabd24f568a60fd22c94d
-DIST ragel-6.4.tar.gz 571767 RMD160 a432fc93f8b107b43d323f389137cc609e061d01 SHA1 480807c488a82d168f6a2527fa85035c37a68ba5 SHA256 dab2360332abf07aff903e834c18f687322a682f55cb0b44aafe383a7ab88cb7
 DIST ragel-6.5.tar.gz 973457 RMD160 162af80f2fdaeb43dc2ce98b1834b17156f27e9f SHA1 7bc2cd5fb40d00e71e1d37a6d4d69c83c67f983f SHA256 5234efbb4ff9d8206ba5d304fca93ce1ce3df0ad75ffb374347bf03cb1527787
-DIST ragel-guide-6.4.pdf 576521 RMD160 4f659476d941054d4f15a36b019b54e8669f06ba SHA1 dd3305629ec4d9d8dda3472ced9f644ec42c112c SHA256 6268f2b1cfc98fdd9d856742cf27361fb1921aa5f1c434bdf7d26043692c8527
-EBUILD ragel-6.4.ebuild 1255 RMD160 19a7c05da91b916f55b1c46f753bad03ae075c12 SHA1 babb512430b0b774b222fcc12aac14d30235992c SHA256 f74595f93440677ca8977dad45d862d83fb616f48e934d6b5440a54a493db238
+DIST ragel-6.6.tar.gz 1091836 RMD160 b0de6eaa6383f5fc9f9121012262685eec408450 SHA1 8c085300c90e23a120684760b5f078fca275bb49 SHA256 a8f38166d57163ff821ad4608ba258ed3b01ac8abb890440e03163cbb835e932
 EBUILD ragel-6.5.ebuild 1044 RMD160 7eb47b10138ef963cbbc938964a7f24dd1cfc1ef SHA1 ad4747e117f80526bd093101041b2aaebf6790e1 SHA256 a863936cddf1f59d1ba084e85440214886256b5fb0b36edc3c75a11419966aff
-MISC ChangeLog 4246 RMD160 dbd910c9d2f4c268847337056f25008cc6efc06f SHA1 7f515737388e30b92724ec2077e3af5d82ed1eef SHA256 364b6b2d19997636333e3560e87180f8318c2b52b8bd527093c62be13850b82b
+EBUILD ragel-6.6.ebuild 1038 RMD160 f1daa0c29e8deb289d35418e8de8c7bc19b845ce SHA1 4d41843335da00791f3b144575f6ced30460077e SHA256 237b86ce4264dec58137db38ce9f705bff4b7db45e47d402b25036f4508a7a40
+MISC ChangeLog 4462 RMD160 75865f670044f4302382bafe53d9c9092fa9293c SHA1 907fdabe3be8bf8f3fbdcd4c4f477f927f7e8b35 SHA256 213d1db0dc2d150561b08e78c20c1554929d022c1f68f621ddc4c0af335c9e98
 MISC metadata.xml 302 RMD160 9205fdcfd20baf4dd662ab6ebc1f99703a8ff3bd SHA1 e3da4820729ccfd84d5705065c7f3b70983b5a29 SHA256 2f71f52c17df00296cea96267c2fe72b083db772d619e8616029254e81484abb
