@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/ragel
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/ragel/ChangeLog,v 1.29 2009/07/03 16:03:19 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/ragel/ChangeLog,v 1.30 2009/12/03 20:53:52 flameeyes Exp $
+
+*ragel-6.6 (03 Dec 2009)
+
+  03 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org> +ragel-6.6.ebuild:
+  Version bump; add a src_test function but restict them, since they need an
+  ebuild that is not in Portage yet.
 
   03 Jul 2009; Diego E. Pettenò <flameeyes@gentoo.org> -ragel-6.3.ebuild,
   -ragel-6.4.ebuild, -files/ragel-6.4-solaris.patch:
